--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,33 @@ plugins {
   id "com.moowork.node" version "1.3.1"
 }
 
-task sayHello {
-  doLast {
-    println 'Hello World!'
-  }
+node {
+	download = true
+	version = "9.11.1"
+	npmVersion = "5.6.0"
 }
 
-task anotherThing {
-  dependsOn 'sayHello'
-  doLast {
-    println 'Good to meet ya!'
-  }
+//declare a build task
+task build
+
+//declare a task to create a zip of the app
+task zip(type: Zip) {
+	from ('.') {
+		include "*"
+		include "bin/**"
+		include "data/**"
+		include "node_modules/**"
+		include "public/**"
+		include "routes/**"
+		include "views/**"
+	}
+	destinationDir(file("dist"))
+	baseName "trainSchedule"
 }
+
+//declare task dependencies
+build.dependsOn zip
+zip.dependsOn npm_build
+npm_build.dependsOn npm_test
+npm_test.dependsOn npmInstall
+npm_build.dependsOn npmInstall
