adds gradle build

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 node_modules
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+node_modules
+dist
